# MOOA

./: CMakeLists.txt  all_pop.out  build.sh  final_pop.out  initial_pop.out  params.out  plot.out  run.sh
Testing/tb_template_0426/tb_template/: diffamp_ac1.sp  diffamp_ac_cmrr.sp  diffamp_ac_psrr.sp  diffamp_tran1.sp  diffopamp.sp  extractionfunction_0426.py
backups/: main.cppbak002  main.cppbal001
module_demo/: CMakeLists.txt  Makefile  all_pop.out  main.cpp
module_nsga/: CMakeLists.txt  Makefile  all_pop.out  allocate.c  auxiliary.c  cmake_install.cmake  crossover.c  decode.c  display.c  dominance.c  eval.c  fillnds.c  initialize.c  list.c  merge.c  metrics.c  mutation.c  nsga2r.c  params.out  plot.out  problemdef.c  rand.c  rank.c  referencepoints.c  refpoints.out  refpoints_allpop.out  report.c  selection.c  sort.c  tourselect.c
module_nsga/include/: global.h  nsga2r.h
module_nsga/input_data/: dtlz3c.in
module_nsga/real_front/: C2-DTLZ2-10-PF.txt  C2-DTLZ2-3-PF.txt  C2-DTLZ2-5-PF.txt  C2-DTLZ2-8-PF.txt  DTLZ1-15-PF.txt  DTLZ1-3-PF.txt  DTLZ1-5-PF.txt  DTLZ1-8-PF.txt  DTLZ1C-10-PF.txt  DTLZ2-10-PF.txt  DTLZ2-3-PF.txt  DTLZ3-8-PF.txt  DTLZ3C-5-PF.txt  DTLZ4-15-PF.txt  DTLZ5-10-PF.txt  DTLZ5-15-PF.txt  DTLZ5-3-PF.txt  DTLZ5-8-PF.txt  DTLZ7-10-PF.txt
resource/tb_template/: ac1.txt  diffamp_ac1.sp  diffamp_ac_demo.sp  diffamp_tran_demo.sp  diffopamp_demo.sp  extractionfunction.py  function.py  main.py  test.txt  tran1.txt
resource/tempfiles/: ac_res.txt  diffamp_ac_demo.sp  diffamp_dc_demo.sp  tran_res.txt
simulator/: CMakeLists.txt  Simulator.cpp  SimulatorWrapper.cpp  all_pop.out
simulator/include/: Simulator.h  SimulatorWrapper.h  io_utils.h
